--- a/front/package.json
+++ b/front/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "dependencies": {
     "compression": "^1.7.4",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "node": "^12.20.0"
   },
   "repository": {
     "type": "git",
@@ -21,7 +22,7 @@
     "@webcomponents/webcomponentsjs": "^2.8.0",
     "bootstrap": "^5.2.3",
     "clean-webpack-plugin": "^4.0.0",
-    "copy-webpack-plugin": "^11.0.0",
+    "copy-webpack-plugin": "^9.1.0",
     "css-loader": "^6.8.1",
     "dateformat": "^5.0.3",
     "file-loader": "^6.2.0",
@@ -34,8 +35,8 @@
     "standard": "^17.0.0",
     "style-loader": "^3.3.3",
     "to-string-loader": "^1.2.0",
-    "webpack": "^5.84.1",
-    "webpack-cli": "^5.1.1",
+    "webpack": "^5.70.0",
+    "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.15.0",
     "webpack-merge": "^5.9.0"
   },
